--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
 :root{
     --yellow: yellow;
 }
 
  *{
-    font-family: 'Nunito', sans-serif;
+    font-family:  'Poppins', sans-serif;
     margin: 0; padding: 0;
     box-sizing: border-box;
     text-transform: capitalize;
@@ -290,7 +290,7 @@ header .search-bar-container label:hover{
     background: skyblue;
     color: var(--yellow);
     border-radius: .5rem;
-    padding: 2rem 1rem;
+    padding: 1rem 1rem;
 }
 
 .heading span.space{
