--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ html{
 header{
     position: fixed;
     width: 100%;
+    max-width: fit-content;
     top:0; left: 0; right: 0;
     background: skyblue;
     z-index: 1000;
