--- a/style.css
+++ b/style.css
@@ -732,8 +732,8 @@ header .search-bar-container label:hover{
         font-size: 45%;
     }
 
-    .heading span{
-        font-size: 2.5rem;
+    header .logo{
+        font-size: 1.5rem;
     }
 
     header .navbar a{
