--- a/style.css
+++ b/style.css
@@ -512,10 +512,15 @@ header .search-bar-container label:hover{
     background-color: rgb(248, 235, 53);
 }
 
-.review .review-slider{
-    padding-bottom: 2rem;  
+.review{
     width: 100%;
-    max-width: 40%;  
+    height: 100%;
+    overflow-x: hidden;
+}
+
+
+.review-slider{
+    padding-bottom: 2rem;  
 }
 
 
@@ -612,7 +617,6 @@ header .search-bar-container label:hover{
 .brand-container{
     text-align: center;
     padding-top: 1rem;
-    max-width: 20%;
 }
 
 .footer{
@@ -735,9 +739,14 @@ header .search-bar-container label:hover{
         font-size: 45%;
     }
 
+    .heading span{
+        font-size: 2.5rem;
+        padding: 0.5rem 0.5rem;
+    }
+
     header .logo{
-        font-size: 1.8rem;
-        /* padding-left: 3rem; */
+        font-size: 2rem;
+        padding-left: 3rem;
     }
 
     header .navbar a{
@@ -750,9 +759,10 @@ header .search-bar-container label:hover{
     }
 
     .brand-container{
-
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
     }
-    
 
     .footer .box-container{
         max-height: 12vh;
